# XPBDPhysics

./: .gitignore  CMakeLists.txt  DESIGN.md  TODO.md  main.cpp
.claude/: settings.local.json
examples/: camera_controller.hpp  gjk_epa_demo.cpp  tetra_rigidbody.cpp
include/: linear_bvh.hpp
include/unordered_dense/: stl.h
include/utils/: collider.hpp  math.hpp  shapes.hpp  vec3.hpp
include/xpbd/: broadphase_partition.hpp  collision_filter.hpp  entity.hpp  mat3.hpp  math.hpp  particle.hpp  quat.hpp  rigid_body.hpp  typed_store.hpp  xpbd_simd.hpp  xpbd_world.hpp
include/xpbd/colliders/: collider.hpp  collision_sphere.hpp  world_shape.hpp
include/xpbd/constraints/: contact_constraint.hpp  distance_constraint.hpp
include/xpbd/narrowphase/: contact.hpp  gjk.hpp  narrowphase.hpp  sphere_sphere.hpp
src/utils/: math_avx.cpp  math_avx2.cpp  math_dispatch.cpp  math_internal.hpp  math_scalar.cpp  math_sse2.cpp
src/xpbd/: xpbd_simd.cpp  xpbd_world.cpp
src/xpbd/systems/: distance_constraint_system.cpp  rigid_body_integration_system.cpp  sphere_collision_system.cpp  verlet_integration_system.cpp
tests/: foundation_tests.cpp  gjk_tests.cpp
